Comment out a bunch of stuff and update docs
