# server/db/user_queries.go
@@ -6,9 +6,10 @@ import (
 
 func CreateUser(user models.Customer) error {
 	// TODO change implementation
-	var lastInsertId int
-	query := `INSERT INTO todo (title, text, iscompleted, category, deadline)
-			  VALUES ($1, $2, $3, $4, $5) RETURNING id`
-	err := DB.QueryRow(query, todo.Title, todo.Body, todo.Done, todo.Category, todo.Deadline).Scan(&lastInsertId)
-	return err
+	// var lastInsertId int
+	// query := `INSERT INTO todo (title, text, iscompleted, category, deadline)
+	// 		  VALUES ($1, $2, $3, $4, $5) RETURNING id`
+	// err := DB.QueryRow(query, todo.Title, todo.Body, todo.Done, todo.Category, todo.Deadline).Scan(&lastInsertId)
+	// return err
+	return nil
 }
